dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.53)
AC_INIT()
AM_INIT_AUTOMAKE(texi2html, 1.66)
dnl Misc variable settings
T2H_DATE=2002-06-08
T2H_VERSION=${VERSION}

AC_SUBST(T2H_DATE)
AC_SUBST(T2H_VERSION)
INIT="$srcdir"/texi2html.init
AC_SUBST_FILE(INIT)
MYSIMPLE="$srcdir"/MySimple.pm
AC_SUBST_FILE(MYSIMPLE)

dnl Checks for programs.
AC_PATH_PROG(PERL, perl, /usr/bin/env perl, /opt/perl5/bin:"$PATH")

dnl --> Check for parts of Texinfo package
AC_PATH_PROG(MAKEINFO, makeinfo)
AC_PATH_PROG(INSTALL_INFO, install-info)
AC_PATH_PROG(TEXI2DVI, texi2dvi)
AC_PATH_PROG(DVIPS, dvips)
AC_PATH_PROG(PS2PDF, ps2pdf)
dnl

AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Blah
AC_ARG_PROGRAM

# We want sysconfdir and mandir to be expanded when
# the default-prefix is used.
test "x$prefix" = xNONE && prefix=$ac_default_prefix
eval "sysconfdir=$sysconfdir"
eval "mandir=$mandir"
# We could be cleverer about handling special characters in the values
# of $sysconfdir or $mandir, but automake doesn't so we won't either.

extrasub='s%@BANGPERL@%! @PERL@%'

AC_OUTPUT(Makefile texi2html.1 texi2html:texi2html.pl doc/Makefile)
